# Intellibot

./: .env.example  .gitignore  .mcp.json  .replit  AGENTS.md  AGENT_AUTHORITY_MATRIX.md  AGENT_HANDOVER_BRUTAL.md  ARCHITECTURE_OVERVIEW.md  AUDIT_AND_COMPLIANCE.md  BACKTEST_FIX_CHECKLIST.md  BFF_API_CONTRACT.md  CHAOS_DEPLOYMENT_GUIDE.md  CLAUDE.md  CLAWBOT_INGESTION_GUIDE.md  COMPACT_SUMMARY.md  CORE_FILES_DEEP_DIVE.md  CURSOR_AGENT_HANDOVER.md  DATABASE_SCHEMA.md  DATA_INSIGHTS_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_POLYGON.md  DEPLOYMENT_PLAN.md  DEVOPS_DELIVERY_SUMMARY.md  DIABOLICAL_CONFIG_V8.json  DIGITALOCEAN_DEPLOYMENT.md  Dockerfile  Docs  END_TO_END_FLOW.md  ENV_AUDIT.md  EVENTS_AND_STRIKE_MODE.md  FRONTEND_ARCHITECTURE.md  HANDOFF.md  HYDRA_API_UPGRADE_PLAN.md  HYDRA_CPL_ARCHITECTURE.txt  HYDRA_CPL_CODE_CHANGES.md  HYDRA_CPL_INTEGRATION.md  HYDRA_CPL_QUICK_REFERENCE.md  HYDRA_INTEGRATION_FIX_PLAN.md  HYDRA_V8_COMPLETE_DOCUMENTATION.md  IBKR_SETUP_STATUS.md  (+58 more)
attached_assets/: Pasted--0DTE-SETUP-FAMILIES-CONCEPTUAL-TAXONOMY-Each-family-de_1769287835903.txt  Pasted--THE-RATTLESNAKE-0DTE-ENGINE-THEORY-BLUEPRINT-The-Core-_1769286800032.txt  Pasted--THE-RATTLESNAKE-0DTE-ENGINE-THEORY-BLUEPRINT-The-Core-_1769287425981.txt  Pasted-1-0DTE-Directional-Gamma-Plays-You-already-know-this-on_1769293884101.txt  Pasted-NEXT-GEN-ADDITIONS-TO-THE-RATTLESNAKE-Think-of-these-as_1769288726499.txt  Pasted-NEXT-GEN-ADDITIONS-TO-THE-RATTLESNAKE-Think-of-these-as_1769288992324.txt  (+3 more)
backtest/: JUPITER_DEPLOYMENT_DECISION.md  final_diabolical.py  (+1 more)
(+300 files in other folders)
