[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "openai>=2.15.0",
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "pytz>=2025.2",
    "schedule>=1.2.2",
]
